manifests/apps/morel/morel-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: morel
  namespace: apps-external
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: main-gateway
      namespace: system-ingress
      sectionName: websecure-morel
  hostnames:
    - morel.rs
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: morel
          port: 8080
